Updated help files and fixed Sort Dialog bug DBConvert